--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elemental Clash</title>
+    <title>Rock Paper Scissors Infinite</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <img class="background" src="Images/backgroundRPS.png" alt="Background Rock Paper Scissors">
 
-    <h1 class="header">Elemental Clash</h1>
+    <h1 class="header">Rock Paper Scissor Infinite</h1>
     <p class="header">This new form of Rock, Paper, Scissors introduces a new level of challenges 
         by introducing fifteen choices to choose from!
     </p>
